--- a/banking.html
+++ b/banking.html
@@ -1,1 +1,55 @@
-<h1 class="5xl">Welcome To The Banking Page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Banking</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+
+</head>
+<body>
+    <header>
+        <h1 class="text-5xl text-center mt-16">Let's get some <span class="font-semibold text-green-500">Mooooooney!!!!!s</span></h1>
+    </header>
+    <main class="w-3/4 mx-auto ">
+        <section class="mt-10 text-white">
+            <div  class="grid grid-cols-3 gap-8">
+                <!-- deposit -->
+                <div class="bg-blue-400 p-8 rounded-2xl">
+                    <h3 class="font-semibold text-3xl">Deposit</h3>
+                    <h4 class="font-semibold text-5xl">$00</h4>
+                </div>
+                <!-- withdraw -->
+                <div class="bg-green-400 p-8 rounded-2xl">
+                    <h3 class="font-semibold text-3xl">Withdraw</h3>
+                    <h4 class="font-semibold text-5xl">$00</h4>
+                </div>
+                <!-- balance -->
+                <div class="bg-purple-400 p-8 rounded-2xl">
+                    <h3 class="font-semibold text-3xl">Balance</h3>
+                    <h4 class="font-semibold text-5xl">$1200</h4>
+                </div>
+            </div>
+        </section>
+        <section class="mt-10">
+            <div class="grid grid-cols-2 gap-4">
+                <!-- deposit -->
+                <div class="bg-red-100 p-8">
+                    <h2 class="text-2xl font-medium">Please Deposit</h2>
+                    <input class="border border-blue-500 rounded px-3" type="text" placeholder="$ amount you want to deposit">
+                    <br>
+                    <button class="bg-gradient-to-r from-green-400 to-blue-500 focus:from-pink-500 focus:to-yellow-500 px-3 py-2 mt-3 rounded text-white font-semibold">Deposit</button>
+                </div>
+                <!-- withdraw -->
+                <div class="bg-yellow-100 p-8">
+                    <h2 class="text-2xl font-medium">Please Deposit</h2>
+                    <input class="border border-blue-500 rounded px-3 w-3/4" type="text " placeholder="$ amount you want to deposit">
+                    <br>
+                    <button class="bg-gradient-to-r from-green-400 to-blue-500 focus:from-pink-500 focus:to-yellow-500 px-3 py-2 mt-3 rounded text-white font-semibold">Withdraw</button>
+                </div>
+            </div>
+        </section>
+    </main>
+</body>
+</html>
