depo withdraw border rounded

--- a/banking.html
+++ b/banking.html
@@ -35,14 +35,14 @@
         <section class="mt-10">
             <div class="grid grid-cols-2 gap-4">
                 <!-- deposit -->
-                <div class="bg-red-100 p-8">
+                <div class="bg-red-100 p-8 rounded">
                     <h2 class="text-2xl font-medium">Please Deposit</h2>
                     <input id="deposit-amount" class="border border-blue-500 rounded px-3" type="text" placeholder="$ amount you want to deposit">
                     <br>
                     <button id="deposit-btn" class="bg-gradient-to-r from-green-400 to-blue-500 focus:from-pink-500 focus:to-yellow-500 px-3 py-2 mt-3 rounded text-white font-semibold">Deposit</button>
                 </div>
                 <!-- withdraw -->
-                <div class="bg-yellow-100 p-8">
+                <div class="bg-yellow-100 p-8 rounded">
                     <h2 class="text-2xl font-medium">Please Withdraw</h2>
                     <input id="withdraw-amount" class="border border-blue-500 rounded px-3 w-3/4" type="text " placeholder="$ amount you want to deposit">
                     <br>
