repetation stopped with creating more function

--- a/banking.html
+++ b/banking.html
@@ -37,7 +37,7 @@
                 <!-- deposit -->
                 <div class="bg-red-100 p-8 rounded">
                     <h2 class="text-2xl font-medium">Please Deposit</h2>
-                    <input id="deposit-amount" class="border border-blue-500 rounded px-3" type="text" placeholder="$ amount you want to deposit">
+                    <input id="deposit-amount" class="border border-blue-500 rounded px-3 w-3/4" type="text" placeholder="$ amount you want to deposit">
                     <br>
                     <button id="deposit-btn" class="bg-gradient-to-r from-green-400 to-blue-500 focus:from-pink-500 focus:to-yellow-500 px-3 py-2 mt-3 rounded text-white font-semibold">Deposit</button>
                 </div>
@@ -51,6 +51,6 @@
             </div>
         </section>
     </main>
-    <script src="js/banking.js"></script>
+    <script src="js/banknig-function.js"></script>
 </body>
 </html>
