--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         <input id="pass-info" class="block mt-4  w-3/4 border border-pink-400 rounded px-3" type="password" placeholder="Password">
         <button id="info-btn" class="bg-gradient-to-r from-green-400 to-blue-500 hover:from-pink-500 hover:to-yellow-500 px-4 py-2 rounded text-white mt-3">Submit</button>
     </div>
-    <script src="js/bank.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
